@@ -2,7 +2,7 @@ DIST scala-1.2.0.1.tar.bz2 4548508 SHA256 975d6e10febf5d52a3f2d826afa7f98ddbec0a
 DIST scala-2.11.4.tgz 26509669 SHA256 000f5a19de78049bc06e33ee98063c7ad3cfd51212df92a8a164af89aeef8084 SHA512 f963279cba5d2f4d41d195f80dad32bf529bc5f2c3d306ce6c1b9fbb6d4977a481796d98c3d1758f3987824880ab0925ac72e3a70e4165faf7c7985e64cece28 WHIRLPOOL a76a97854e0d4ac9f2f555ab3b5196d473e8723c88926163f88c891ac31cacb7d97acadf437aee101b2d9db0fc0295f4b3fc95c5db6bc16de8e6ff54b1a2ecda
 DIST scala-2.11.5.tgz 27135212 SHA256 6d593ce6df0e4f2e90ae423f2d40b915cd9be2bd41708b7fc1df56ebbdf0893c SHA512 c906cb1e42a62fc271674cb95b3eacd968dd579dfd43a1adaae8a102b4069096907af4798a6a002dfec796905e3cff05d58116013c8e45a7277879935c39d3d3 WHIRLPOOL d05fd600bf5c24a856f75ca245338d97da642dd7d68033bf21364aa9ba82aa79c00b37a1a8721cd761126e011556ef52ad06a370d680b04aa5391488e695f739
 EBUILD scala-bin-1.2.0.1.ebuild 1460 SHA256 c8e4b2b860b5bc8f64c4e88063719862900914eba80f6e19f28deaab5db64029 SHA512 bfbd26744bdf89b3388dffd690f97148f7b9a46bb68733577419a83c81bcab79423e45ebcbbd9988d1b66d95dd50f92e04841e2a6cbbd2bc6770799ba76cea7d WHIRLPOOL 117d23760fd46c6ebdd66a0b937fa48020754d86220d79d0ea2ae98c48e131500a4f5ff3236f96df5401591bece3ba72bfe7ae8dbf4b3566102170be3231a0a0
-EBUILD scala-bin-2.11.4.ebuild 1919 SHA256 f338032c9b90aab16e17d03902544c0dacba0c992f961fb0e2a90a8b3ee2679e SHA512 3e350a6499959fdb9eb2c30f1a1d6d23ffc9a47d0caed2bfb052264e5466d8cf5c93cebb50a8836438b09593598058f90a8352ed3548c1b758d9762b286e30d1 WHIRLPOOL 6e79379af152918d8680c258f639d43d79de33318d863d5d1d643ee372fccd07401fdfe64383c07f3a1697428104dc2f6013de8472d8e3d8a3f77ec62f953d69
-EBUILD scala-bin-2.11.5.ebuild 1919 SHA256 3712335420de070691fb763f0931a1a61c7358846aade8d4421421308583ef1c SHA512 a48a07df103e78dcfb4859461e3bb95ee5d1f434f4991dafaaf01287851f87cbea8de1fb92e4cc7b6c3841ac993d4650f66f2ef2c631c1ebfc617ac9b306adbc WHIRLPOOL c3871fac1c6c673a0d5ad4d639440250b4807e28fc753458358494f31872a4e23962561c37f59f10eb7801f1d765b3d96a08f1a9d5d464b0f5f2149055ac2bcf
-MISC ChangeLog 2527 SHA256 b590fad8c60bcdbb039871021bccd81c11e20bb46228c5c3cace252b659b14a4 SHA512 761127f4127e7712e0d3db98cc10c1ef4a6d6b7fcd1c7beb3dfb3b12d93a3d0172537311cbdbda9ba291e41705ef559af6882f61a3543875abba9f378ba93c78 WHIRLPOOL 86ca929ed9439cc566641502fcd3b43622b5a1fcd1b644560e0c9cd572a4168a95649fc5de2f0635db98c6e1728bc307408dc05fea89b5bea73df920fc9b1bc8
+EBUILD scala-bin-2.11.4.ebuild 1917 SHA256 ccdb99e8194aab6fb9f82e0202f502d13ecf5b66a70e7bb7e91e6e0434b15a60 SHA512 181cf46df338f9b48ba192d49a284481497bce7d93ca4c22e3183c65db4ce37133f7eab652604dabe10bcf5bfc0a3bcc024b4e0271881580691c3aba97248a9e WHIRLPOOL c63355f85afe4b3548e3254c5713b3ff502e938acb17527ad95632d2a841dfd18e926aed94a3353637095cc6aff53437ddb6b1c0a8de065fcd9508ab341ea977
+EBUILD scala-bin-2.11.5.ebuild 1917 SHA256 731d98ebdf8face12c9e2340338a9af38561d381fa242b2e0a3bbc4c29ac6173 SHA512 c6e0a9b34fb861576f02bc4bc9136f4ed0de1a43b5e970571c2af5a3d138b8f7c7ed5b31d31d290f3a5e2d16c6c72ef814dbd29daf13766f6326e9e8f842cc45 WHIRLPOOL c55ad531a3abef2c5c5f81271ddfd8fc1e1dcc1e23f1766a031b5bdd59c34a0bd655919b923cc657e315d6599d382d23b80eacadcf56c757445723ce2c47f31b
+MISC ChangeLog 2712 SHA256 7fcf7b72adc7eb3e65542d2a46f5d3aa83bcd831904884cf5c3f289a1a19b5e6 SHA512 8f0e73390d72f145b54f4a11e0e69838615336297a7d6d12e38af0844df5799086af05403830fb21567a0904d36b11de9369baf20de1624ca7cea9dd9caa0b36 WHIRLPOOL 0561195f664760580e7f075f7304880fa870cec0124335ed29ce9b0528c79a0257a4b03ebbe69fc918a2098fb92df94b792ea9ebf86741ec462ecebf289996db
 MISC metadata.xml 159 SHA256 da2aaa3223c5418688dfbba6f899648c5bcb2e4610126519a1a862913c4f8fa6 SHA512 f5bc77a4e168cdb5a9f9c347f6f437b16bd28978351ec692d4f7e406ba93479424e2272de70fe85d2e0668172de8ccd3aa096f49d5912ed91d17bea11756865b WHIRLPOOL b0cba2d5917cc20d7409ccfedc345ab38c71df76c5c030df578d6db718f8a60dcfc1927c20e7062fafc62e955a90ec9f21cdcef6d7a566fddf374ce766ca64cc
