@@ -1,9 +1,9 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/scala-bin/scala-bin-2.11.5.ebuild,v 1.1 2015/02/19 21:45:30 monsieurp Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/scala-bin/scala-bin-2.11.5.ebuild,v 1.2 2015/03/04 13:08:32 monsieurp Exp $
 EAPI=5
 
-inherit java-utils-2
+inherit java-pkg-2
 
 DESCRIPTION="The Scala Programming Language"
 HOMEPAGE="http://scala.epfl.ch/"
