@@ -1,12 +1,13 @@
-DEFINED_PHASES=install
+DEFINED_PHASES=compile install preinst prepare setup
+DEPEND=>=dev-java/java-config-2.1.9-r1
 DESCRIPTION=The Scala Programming Language
 EAPI=5
 HOMEPAGE=http://scala.epfl.ch/
 IUSE=doc elibc_FreeBSD
 KEYWORDS=~x86 ~amd64
 LICENSE=BSD
-RDEPEND=>=virtual/jre-1.6 !dev-lang/scala
+RDEPEND=>=virtual/jre-1.6 !dev-lang/scala >=dev-java/java-config-2.1.9-r1
 SLOT=0
 SRC_URI=http://downloads.typesafe.com/scala/2.11.5/scala-2.11.5.tgz
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=f1855572ba3d5bfb102d0ec5464c3097
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=34d60759211a5c98a53ed3cf8f0be3dc
