@@ -7,24 +7,24 @@ AUX telepathy-qt-0.9.3-tp-glib-0.18-tests.patch 1456 SHA256 17d77ffe834908b6bd91
 DIST telepathy-qt-0.9.3.tar.gz 4414599 SHA256 c0ff57bea79b86ad343e184c16941d05f6d6d7dfd03876b44502f11935f44bf9 SHA512 46e370c9a2b8ee486cd99e5226a0098e8d04d2db105434097d617eda106e9f6f70b7de349646f46480792ed374984b8d3adff28b6d18f6ef6c979d4282902cb2 WHIRLPOOL d0bd45a772782dfaf2362a42265ee55ef47e4c80279b88d5ab2e2ef30dc9dc40b8423ff80ef451a33dc782253e53af9594f60d6e3299dadd8b073671200f0ed2
 DIST telepathy-qt-0.9.5.tar.gz 5862803 SHA256 93474858efe55bf45ee9352f88b852d4a24505939dc81a3a3c6fa5a686809c8e SHA512 2cc141037fbd2cc993f16e2ba52b3f6dda7841ff150f9d40d9e659eafdee67dd23563662954247f46bd8a34db7d87b7ec770da90725a19f634cd396a2d74e34b WHIRLPOOL cfef1a61725d0e07b65995155def64120d7d6993772511971eb7c8f7bcd956ed462544afbf52559cf2d5cc1825aeb1ce1f17371700d5a5e7f540b69da38d0709
 EBUILD telepathy-qt-0.9.3-r2.ebuild 1512 SHA256 1af5f53ed4e8b595b744bfb6a440c9a9ef3e0c8d7b6b8b7c899af4da1975dfff SHA512 342006f925db65463886edf2cc8fefcdb861baeb79dc0104b03536a6576b3f22480a147743dcfdfa644c19db4b3515da8803fa27d891b343d6cbc90389639be1 WHIRLPOOL 11b0de52ec91e39883fad401ce1463a0d921779d5a1eee276a793bbbe06951cc503e0a8835e49d5cd84d180cbb21b0ee027854a267e5b3e12a7bdfe869160176
-EBUILD telepathy-qt-0.9.5.ebuild 2011 SHA256 f1ebb3be4cdb1b166501cddaa2da8ed8ae9bea2c83b20c484630f432cb10ece2 SHA512 b1248f4b9c2582e02298b681023627b04edb76d7ead628a155cceddd4150aee4d1b6abda79655a058ad9dc2ef64bd54872c34716a7394a790a6c9743a61793ce WHIRLPOOL b78b2c218ca2f96a3e3941ce10f775ecc8e79a87682b7b66ea8b634f1a008c3f117fadb94ee1534f0a82cbf310d8a0a9ec061debf7577b502cbbc7e3835ca422
-MISC ChangeLog 7052 SHA256 c8c9fe8b42cef3dfee8cab0b7ac9d526987b20d7aaa6b172fb5bbab5fbc8ec34 SHA512 d9a9c97bf48ef827ebe73dcce1e2d45e9eccd843a590cc948f28b788dad7a81cf1ed239349b17f363ad4db80dfb286dd1bd233776ba6dca8c841ccc6071fd500 WHIRLPOOL ffc91958319137e0b5eebc7a65b623036c99c556e772fcc0f7f969185881ea9b72bf64d35bb25986fb1a35d9ace7bf3793bba5db6bb394b7d330ce0ef9ebab2d
+EBUILD telepathy-qt-0.9.5.ebuild 2038 SHA256 94fc3f72feeea678148eb5e75926749ce1a8604571a5ba2cb6919a97a900daf8 SHA512 2b14e950d3206c8901f5e804f02462af70029e0fcbbc081148aecaa800365191ff1b6ad35dde90346107242ce3cc2aa01da8e9ef12bf5b9da73560c63f46e69f WHIRLPOOL 3eed166b30279dfb1f81d26c9998c0cb663a5ae891a3f7f2c10660b5c11a7d278b514111e990fc5192036c563cfe62c56e0570bc11c6647d936f2ad46e8c9fe0
+MISC ChangeLog 7177 SHA256 261f39cf9446a1e1f3ec61b5e7028aa635ab69641fec605eea33f6b272516987 SHA512 38d9a7f4a2b998c0fdff91945b4a35f01388888c48dcdf6601d5199ea2d0957809d4b1eac6f4882e5f8ae8b6265fb8561455d0378d8b77557dce7e3a7f3207d7 WHIRLPOOL 9ce2a4305d3fb392c01c77f64c0eb4aac243f5bbd172152bdf365ad1b62a2027d067684c7e8506580c6e9585d32aa16ad257ea5cc0f5ec0ca3c16b332348b528
 MISC metadata.xml 272 SHA256 b1a0e608561c47e26b774c17f9118677de0d6b6dfd4897d65e08f6e063507f8e SHA512 66e6bb81db3c838e6a94dfb614c9b2075c3055fdf8f0d7254d104276b8385ee9bc2dbb27e543db4fa58958485c0d250f5963c5d77257d5398be1603974e9c2e9 WHIRLPOOL e9a05ecba5716465fa88e392aeeb0c9d0b2f9e3ced219d0487718d08685dbd1057e25b27ce3a881b4d17c80168e259631d9508a8ee1cb2ee7813a5a5673913f8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJiBAEBCABMBQJU9va/RRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+iQJiBAEBCABMBQJU9wQORRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
 MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
-7A9SD/4irtn27lxBcMqOpR2Gj96Rvc7I9de3A/HHN8ARe9ULscA4itcr+bNYTjYV
-T0zcrQyVNvfP5ut45C64CuHja3n6yiW7t93UY1ouy9asbm2di1nwqsDuCm+JHavu
-cRaRv5SBXPaQBQq7AvwS8m4phAsvGixEo3T23WwSZG61eUc4QEU56pqMKNID+pW7
-oB6lhWnnTTEMiHhEc2UbrgHl2t3FR/aric7Qrgz3SapTJR3mbDs03dwHs5asJN1Y
-6hitX7D7amikvTq2vCQtTVimBWtLlxEjQ4FInev4VmbJhGUZk7Cm2STZIqOo8k9w
-gn0DvtJNluW/lYWYfdO/tBJB6qp7DikHc9inyu2SpT/r0VmYiwladnaTN42M/1Gz
-LUxjDhRGASfkSxUxLe6ob+ophTd+C+qH4uI1VPMvtw5//yRqzpy0/Lw8aelUU9hH
-XrnVDUWnLmdaJIrU/9WQz8OepRgOpu0i4E3PM2/zcFjjsNn0nJywjgLtBtYchwzw
-QAo2r4IX1fcxXM5lOLes6254Pn/aGv4YTyxZ2wjZ0OlES4wbZBq1x4VaB7V7W9AB
-+r0/DVWiBeo8cN9KzSWdYRTzA3VyMElhPgKzmY3Q+y+Vi8WXtj7w28M2IOxj6qGp
-+jBTZ/kKo2A0NNUIztOCaYdxf6155o+Aqs97+JtV3Qe5vlFqSQ==
-=UzQm
+7CjBEACIAXhVqPzi+ccw9khznmqT7Dn7kMffBy1kDwhBsnIWvisWC07AYTikPKjK
+YGx2Ub5qQdMlY6HRd1fFlp1xeJVdNmkhhV32MSX+A3PkW2bn1dQf+nEjUqxEu7QR
+QlmiHsA3gxJFmsrl6p4BOSBHl2CK/Zk8yKQNxpQwB73a/VRUhQQmaOPp420/6tDR
+IFxSej8kJg7b0Mqfdf6/7gE9IAwSEl6dAP0TTXUoExIGddvi0ZffeCwjb7Byvr/S
+yXdSeN+REYcqw9RbzmzKsenPmXZV85/pibsNTo6G1xbjjTUIhV/HNpmfx6l3kAIJ
+zmhKRjrl/gsMU126LwvKGT+nTTJUaqQybldQ01nAiCVTCBpobvu59RDvjIDvYA66
+6iAimUVH4tCdkUtuWWQIQHCXl9jjz7LIdm1dfeMzSR+6vELlc1iNY8t3ey6Hudnq
+cKqM2ABxX3rM6l2jz+A70CmpgQunoG2K3ExNqB/l6BuSW6C1WRLDUAkQOi9n3mOu
+j11bn1jOqZE41U5N4f4ilgu3IcbzoyMRG2H2UiO8PSBRCtrf+FQscIZICV1V3Nyh
+xAbQY8TdhF19yF6rijBpA2IxL3eX6bXdKjQYk0u6aCKRFGmtw6ZZwK80SIHR2sC4
+ITESzk14rAbBDL2yf2DtdLHOXTb8XBT9dffy9KzBdqjkeKqw0w==
+=xy8q
 -----END PGP SIGNATURE-----
