@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/telepathy-qt
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-qt/ChangeLog,v 1.32 2015/03/04 12:12:48 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-qt/ChangeLog,v 1.33 2015/03/04 13:09:26 kensington Exp $
+
+  04 Mar 2015; Michael Palimaka <kensington@gentoo.org>
+  telepathy-qt-0.9.5.ebuild:
+  Disable broken test wrt bug #442178.
 
   04 Mar 2015; Michael Palimaka <kensington@gentoo.org>
   telepathy-qt-0.9.5.ebuild:
