@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/scala-bin
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/scala-bin/ChangeLog,v 1.17 2015/02/19 21:45:30 monsieurp Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/scala-bin/ChangeLog,v 1.18 2015/03/04 13:08:32 monsieurp Exp $
+
+  04 Mar 2015; Patrice Clement <monsieurp@gentoo.org> scala-bin-2.11.4.ebuild,
+  scala-bin-2.11.5.ebuild:
+  Inherit java-pkg-2 instead of java-utils-2 (wrong eclass!). Fix bug 542086.
 
 *scala-bin-2.11.5 (19 Feb 2015)
 
